@@ -1,9 +1,9 @@
-# $Id: README,v 1.27 2004/12/09 00:06:02 manu Exp $
+# $Id: README,v 1.28 2004/12/09 22:19:40 manu Exp $
 ###########################################################################
 
 		     ======================================
 		       milter-greylist installation notes 
-		       $Date: 2004/12/09 00:06:02 $
+		       $Date: 2004/12/09 22:19:40 $
 		     ======================================
 
 		       Emmanuel Dreyfus <manu@netbsd.org>
@@ -44,9 +44,10 @@ On the make install step, the Makefile will install a default config
 file in /etc/mail/greylist.conf, except if there is already such
 a file. In that case the original file is preserved.
 
-Some startup scripts are available: rc-redhat.sh, rc-debian, and rc-gentoo.sh
-for Linux and rc-bsd.sh for NetBSD and FreeBSD. They are not installed by 
-default, you have install the startup script by hand if you want to use one.
+Some startup scripts are available: rc-redhat.sh, rc-debian, rc-gentoo.sh,
+and rc-suse.sh for Linux and rc-bsd.sh for NetBSD and FreeBSD. They are 
+not installed by default, you have install the startup script by hand if 
+you want to use one.
 
 
  2 Configuring sendmail with milter-greylist
